feat: add PayPal rquiring

--- a/.env.develompent
+++ b/.env.develompent
@@ -5,3 +5,5 @@ REACT_APP_STORAGE_BUCKET=skinali-1ebab.appspot.com
 REACT_APP_MESSGING_SENDER_ID=735282186071
 REACT_APP_APP_ID=1:735282186071:web:8e95d6b01a2880fa3f2012
 REACT_APP_MEASURMENT_ID=G-19NVQ89W94
+
+REACT_APP_PAYPAL_API=AV_L052NceFRSbpxdPfCppYKnMx0bQwTVqfhqqYznMvDTEvStraGFk1LCfn_pKhoftEbWBko0fvf6PgH
